adding handling prompt for install PWA

--- a/index.html
+++ b/index.html
@@ -49,6 +49,13 @@
                 Share                 
             </button>
         </li>
+
+        <li id="itemInstall">
+            <button id="btnInstall">
+                <span class="icon">download</span>                
+                Install                 
+            </button>
+        </li>
     </ul>
     <ul id="notes">
 
